feat: enable GitHub Flavored Markdown support in markdownToHTML function